--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,5 +23,5 @@ jobs:
     
     - name: Build
       run: |
-        rustup default nightly
+        rustup default 1.89.0
         cargo build --verbose
