--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,8 +1,8 @@
+edition = "2024"
 max_width = 80
 tab_spaces = 4
-edition = "2024"
-imports_granularity = "Module"
-group_imports = "StdExternalCrate"
 use_field_init_shorthand = true
 use_try_shorthand = true
-format_strings = true
+# imports_granularity = "Module"
+# group_imports = "StdExternalCrate"
+# format_strings = true
