--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
             target/
           key: x86_64-unknown-linux-musl-cargo-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
-            x86_64-unknown-linux-musl-cargo-
+            x86_64-unknown-linux-musl-cargo
 
       - name: Install semantic-release-cargo
         uses: taiki-e/install-action@v2
@@ -116,7 +116,7 @@ jobs:
             ~/.rustup/
           key: ${{ matrix.target }}-cargo-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
-            ${{ matrix.target }}-cargo-
+            ${{ matrix.target }}-cargo
         
       - name: Set up Rust
         run: |
@@ -196,7 +196,7 @@ jobs:
             target/
           key: x86_64-unknown-linux-musl-cargo-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
-            x86_64-unknown-linux-musl-cargo-
+            x86_64-unknown-linux-musl-cargo
 
       - name: Install semantic-release-cargo
         uses: taiki-e/install-action@v2
