--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set Start Time
+        id: set-time
+        run: echo "start-time=$(date +%s)" >> $GITHUB_OUTPUT
+
+
       - name: Cache Cargo
         uses: actions/cache@v4
         id: cargo-cache
@@ -58,6 +63,7 @@ jobs:
       new-release-published: ${{ steps.get-next-version.outputs.new-release-published }}
       new-release-version: ${{ steps.get-next-version.outputs.new-release-version }}
       new-release-git-tag: ${{ steps.get-next-version.outputs.new-release-git-tag }}
+      start-time: ${{ steps.set-time.outputs.start-time }}
       
   build:
     name: Build ${{ matrix.target }}
@@ -179,10 +185,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: true
 
       - name: Setup Git
         run: |
           git pull
+          git fetch --tags --force
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
       - name: Cache Cargo
         uses: actions/cache@v4
@@ -213,6 +223,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+          RELEASE_TIMESTAMP: ${{ needs.get-next-version.outputs.start-time }}
         run: |
           git pull
           npm install -g semantic-release
@@ -223,68 +234,6 @@ jobs:
           npm install -g @semantic-release-cargo/semantic-release-cargo
           npm install -g semantic-release-export-data
           npx semantic-release --repository-url https://github.com/vyfor/cord.nvim
-
-  sync-server-version:
-    name: Sync Server Version Metadata
-    runs-on: ubuntu-latest
-    if: needs.get-next-version.outputs.new-release-published == 'true'
-    needs: [get-next-version, release, merge]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Setup Git
-        run: |
-          git pull
-
-      - name: Install semantic-release-cargo
-        uses: taiki-e/install-action@v2
-        with:
-          tool: semantic-release-cargo@2
-
-      - name: Update version metadata
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          VERSION="${{ needs.get-next-version.outputs.new-release-version }}"
-          
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-
-          semantic-release-cargo prepare $VERSION
-          git add Cargo.toml Cargo.lock
-
-          PREVIOUS_TAG=$(git describe --abbrev=0 --tags `git rev-list --tags --skip=1 --max-count=1`)
-
-          if [ -z "$PREVIOUS_TAG" ]; then
-            echo "No previous tag found, assuming first release"
-            changes="true"
-          else
-            changes=$(git diff --name-only ${PREVIOUS_TAG}..v${VERSION} -- src/)
-          fi
-
-          if [ -n "$changes" ]; then
-            API_URL="https://api.github.com/repos/${GITHUB_REPOSITORY}/releases/tags/v${VERSION}"
-            RESPONSE=$(curl -sS -H "Authorization: Bearer $GITHUB_TOKEN" "$API_URL")
-            TIMESTAMP=$(echo "$RESPONSE" | jq -r '[.assets[].updated_at] | min | if . then fromdate else empty end')
-
-            if [ -z "$TIMESTAMP" ]; then
-              echo "No release assets found for v${VERSION}"
-              exit 1
-            fi
-
-            echo "${VERSION}|${TIMESTAMP}" > .github/server-metadata.txt
-            git add .github/server-metadata.txt
-          fi
-
-          if git diff --cached --quiet; then
-            echo "nothing to commit"
-          else
-            git commit -m "chore: release ${VERSION} [skip ci]"
-            git push
-          fi
 
   luarocks:
     name: LuaRocks Publish
